--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "express": "^4.18.1",
     "mongodb": "^4.7.0",
     "mongoose": "^6.3.6",
+    "node-polyfill-webpack-plugin": "^2.0.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "tar": "^6.1.11"
   },
   "devDependencies": {
